Fix issues with wrapping and positioning

--- a/packages/reporter/src/errors/errors.scss
+++ b/packages/reporter/src/errors/errors.scss
@@ -1,7 +1,6 @@
 .reporter {
   .error {
     background-color: #f5f5f5;
-    margin-top: 30px;
     min-height: 20px;
     padding: 24px;
 
