--- a/packages/reporter/src/runnables/runnables.scss
+++ b/packages/reporter/src/runnables/runnables.scss
@@ -12,7 +12,6 @@
   .wrap {
     box-shadow: 0 1px 2px #aaa;
     margin-bottom: 40px;
-    margin-top: 35px;
     padding-left: 0;
     width: 100%;
   }
@@ -248,8 +247,10 @@
     font-size: 13px;
     font-weight: 600;
     line-height: 24px;
+    overflow-wrap: break-word;
     padding: 5px 10px;
-    position: absolute;
+    position: sticky;
+    top: 0;
     width: 100%;
     z-index: 1;
 
